Jump was being caused by an incorrect height being determined on non-visible elements. There are complicated JS fixed for this but lucky for us explicitly setting the width (100%) fixes the jump for us. Reference this: http://jqueryfordesigners.com/slidedown-animation-jump-revisited/

--- a/ui/css/pods-admin.css
+++ b/ui/css/pods-admin.css
@@ -447,6 +447,7 @@ tbody.pods-manage-list div {
 tbody.pods-manage-list div.pods-manage-row-wrapper {
     max-width: 500px;
     display: none;
+    width:100%;
 }
 
 tbody.pods-manage-list tr.pods-manage-row-expanded {
